--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Uploaders: Debian Python Modules Team <python-modules-team@lists.alioth.debian.o
 Build-Depends: debhelper (>= 5), python-all-dev (>= 2.3.5-11), python-support (>= 0.6)
 Standards-Version: 3.7.2
 Homepage: http://linux.duke.edu/projects/urlgrabber/
-XS-Vcs-Svn: svn://svn.debian.org/python-modules/packages/urlgrabber/trunk/
-XS-Vcs-Browser: http://svn.debian.org/wsvn/python-modules/packages/urlgrabber/trunk/?op=log
+Vcs-Svn: svn://svn.debian.org/python-modules/packages/urlgrabber/trunk/
+Vcs-Browser: http://svn.debian.org/wsvn/python-modules/packages/urlgrabber/trunk/?op=log
 
 Package: python-urlgrabber
 Architecture: all
