--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 5), python-all-dev (>= 2.3.5-11), python-support (>
 Standards-Version: 3.7.2
 Homepage: http://linux.duke.edu/projects/urlgrabber/
 Vcs-Svn: svn://svn.debian.org/python-modules/packages/urlgrabber/trunk/
-Vcs-Browser: http://svn.debian.org/wsvn/python-modules/packages/urlgrabber/trunk/?op=log
+Vcs-Browser: http://svn.debian.org/viewsvn/python-modules/packages/urlgrabber/trunk/
 
 Package: python-urlgrabber
 Architecture: all
