--- a/debian/control
+++ b/debian/control
@@ -5,9 +5,8 @@ Maintainer: Kevin Coyner <kevin@rustybear.com>
 Uploaders: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
 Build-Depends: debhelper (>= 5), python-all-dev (>= 2.3.5-11), python-support (>= 0.6)
 Standards-Version: 3.7.2
-Homepage: http://linux.duke.edu/projects/urlgrabber/
-Vcs-Svn: svn://svn.debian.org/python-modules/packages/urlgrabber/trunk/
-Vcs-Browser: http://svn.debian.org/viewsvn/python-modules/packages/urlgrabber/trunk/
+XS-Vcs-Svn: svn://svn.debian.org/python-modules/packages/urlgrabber/trunk/
+XS-Vcs-Browser: http://svn.debian.org/wsvn/python-modules/packages/urlgrabber/trunk/?op=log
 
 Package: python-urlgrabber
 Architecture: all
@@ -24,3 +23,5 @@ Description: A high-level cross-protocol url-grabber
  retries, access to authenticated http/ftp servers, and proxies. Additionally
  it has the ability to treat a list of mirrors as a single source and to
  automatically switch mirrors if there is a failure.
+ .
+  Homepage: http://linux.duke.edu/projects/urlgrabber/
