Prepare for Python 2.6 transition (closes: #556161).
git-svn-id: svn://svn.debian.org/python-modules/packages/urlgrabber/trunk@10434 771dd761-d7fa-0310-a302-f036d1c1ebb6

--- a/debian/rules
+++ b/debian/rules
@@ -55,7 +55,7 @@ install: build
 	dh_installdirs
 	# Add here commands to install the package into debian/urlgrabber.
 	for py in $(PYVERS); do \
-		$$py setup.py install --root=$(CURDIR)/debian/python-urlgrabber; \
+		$$py setup.py install --prefix=/usr --root=$(CURDIR)/debian/python-urlgrabber; \
 	done
 	# remove unneeded documents installed by setup.py
 	-rm -rf $(CURDIR)/debian/python-urlgrabber/usr/share/doc/urlgrabber-3*
