--- a/debian/control
+++ b/debian/control
@@ -4,15 +4,15 @@ Priority: optional
 Maintainer: Kevin Coyner <kcoyner@debian.org>
 Uploaders: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
 Build-Depends: debhelper (>= 5), python-all, python-support (>= 0.6), dpatch
-Standards-Version: 3.8.3
-Homepage: http://linux.duke.edu/projects/urlgrabber/
+Standards-Version: 3.8.4
+Homepage: http://urlgrabber.baseurl.org/
 Vcs-Svn: svn://svn.debian.org/python-modules/packages/urlgrabber/trunk/
 Vcs-Browser: http://svn.debian.org/viewsvn/python-modules/packages/urlgrabber/trunk/
+XS-Python-Version: >= 2.5
 
 Package: python-urlgrabber
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}
-Provides: ${python:Provides}
 Description: A high-level cross-protocol url-grabber
  urlgrabber dramatically simplifies the fetching of files. It is designed to
  be used in programs that need common (but not necessarily simple)
