--- a/debian/rules
+++ b/debian/rules
@@ -46,9 +46,7 @@ install: build
 	dh_prep
 	dh_installdirs
 	# Add here commands to install the package into debian/urlgrabber.
-	for py in $(PYVERS); do \
-		$$py setup.py install --prefix=/usr --root=$(CURDIR)/debian/python-urlgrabber; \
-	done
+	python setup.py install --prefix=/usr --root=$(CURDIR)/debian/python-urlgrabber
 	# remove unneeded documents installed by setup.py
 	-rm -rf $(CURDIR)/debian/python-urlgrabber/usr/share/doc/urlgrabber-3*
 
