--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: python
 Priority: optional
 Maintainer: Kevin Coyner <kcoyner@debian.org>
 Uploaders: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
-Build-Depends: debhelper (>= 7.4~), python-all, python-support (>= 0.6), python-pycurl
+Build-Depends: debhelper (>= 7.4~), python-all, python-support (>= 0.6), python-pycurl, quilt (>= 0.46-7~)
 Standards-Version: 3.8.4
 Homepage: http://urlgrabber.baseurl.org/
 Vcs-Svn: svn://svn.debian.org/python-modules/packages/urlgrabber/trunk/
