--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Uploaders: Debian Python Modules Team <python-modules-team@lists.alioth.debian.o
 Build-Depends: debhelper (>= 7.4~), python-all, python-support (>= 0.6), python-pycurl, quilt (>= 0.46-7~)
 Standards-Version: 3.8.4
 Homepage: http://urlgrabber.baseurl.org/
-Vcs-Svn: svn://svn.debian.org/python-modules/packages/urlgrabber/trunk/
-Vcs-Browser: http://svn.debian.org/viewsvn/python-modules/packages/urlgrabber/trunk/
+Vcs-Svn: svn://anonscm.debian.org/python-modules/packages/urlgrabber/trunk/
+Vcs-Browser: http://anonscm.debian.org/viewvc/python-modules/packages/urlgrabber/trunk/
 XS-Python-Version: >= 2.5
 
 Package: python-urlgrabber
