[ Tristan Hill ] * New upstream release * Drop all patches now applied upstream * Add libexec patch that moves urlgrabber-ext-down script to /usr/share * debian/control   + Switch to dh_python2   + Bumped standards version to 3.9.5. No changes needed.   + Update package description per lintian warning
git-svn-id: svn://svn.debian.org/python-modules/packages/urlgrabber/trunk@30963 771dd761-d7fa-0310-a302-f036d1c1ebb6

--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,8 @@ Section: python
 Priority: optional
 Maintainer: Kevin Coyner <kcoyner@debian.org>
 Uploaders: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
-Build-Depends: debhelper (>= 7.4~), python-all, python-support (>= 0.6), python-pycurl, quilt (>= 0.46-7~)
-Standards-Version: 3.8.4
+Build-Depends: debhelper (>= 7.4~), dh-python, python-all (>= 2.6.6-3~), python-pycurl, quilt (>= 0.46-7~)
+Standards-Version: 3.9.5
 Homepage: http://urlgrabber.baseurl.org/
 Vcs-Svn: svn://anonscm.debian.org/python-modules/packages/urlgrabber/trunk/
 Vcs-Browser: http://anonscm.debian.org/viewvc/python-modules/packages/urlgrabber/trunk/
@@ -12,9 +12,9 @@ XS-Python-Version: >= 2.5
 
 Package: python-urlgrabber
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, python-pycurl
+Depends: ${misc:Depends}, ${python:Depends}, python-pycurl
 Provides: ${python:Provides}
-Description: A high-level cross-protocol url-grabber
+Description: high-level URL transfer library
  urlgrabber dramatically simplifies the fetching of files. It is designed to
  be used in programs that need common (but not necessarily simple)
  url-fetching features. This package provides both a binary and a module, both
